...
                    .isOpaque(true)
                    .closeOnTapOutside(true)
                    .closeOnTap(false)
                    .backgroundColor(.gray.opacity(0.5))
            }
        }
        .navigationBarTitle("Démineur")
    }
    
    func changeClickType() {
        grid.changeClickType()
    }
    
...
